[tool.poetry]
name = "calendar-filter"
version = "0.1.0"
description = "Calendar filter to subscribe Google Calendars on your iPhone and filter out certain events"
authors = ["Adam Peacock <adam@thepeacock.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icalendar = "^4.1.0"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
rope = "^1.3.0"
black = "^22.8.0"
aiohttp-devtools = "^1.0.post0"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
